# Programming-II-project

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  mingw_res.rc
assets/: font_16x16.txt  tiles_16x16.txt
assets/maps/: empty_map.txt  frame  level8.txt  map.txt  map1.txt  map2.txt  map3.txt  map4.txt  map5.txt
code/: bullets.cpp  bullets.hpp  defer.hpp  exceptions.hpp  game.cpp  game.hpp  glcorearb.h  main.cpp  math.cpp  math.hpp  opengl.hpp  platform.hpp  platform_linux.cpp  platform_windows.cpp  renderer.cpp  renderer.hpp  wglext.h
